--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipies</title>
-    <h1>Odin Recsipies</hs1>
+    <h1>Odin Recsipies</h1>
+    <a href="./recipies/biriyani.html">Biriyani</a>
 </head>
 <body>
     
