added content to recipy page and created 2 new empty recipy pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipies</title>
     <h1>Odin Recsipies</h1>
-    <a href="./recipies/biriyani.html">Biriyani</a>
+    <ul>
+        <li><a href="./recipies/biriyani.html">Biriyani</a></li>
+        <li><a href="./recipies/masalaDosa.html">Masala Dosa</a></li>
+        <li><a href="./recipies/chocolateCake.html">Chocolate Cake</a></li>
+    </ul>
+    
 </head>
 <body>
     
