--- a/recipies/biriyani.html
+++ b/recipies/biriyani.html
@@ -1,1 +1,41 @@
 <h1>Biriyani</h1>
+<img src="/Odin-recipies/biriyani_image.jpg" alt="image of veg biriyani">
+<h1>Description</h1>
+<p>Veg Biryani is a flavourful rice dish made with basmati rice, mixed vegetables, whole spices, freshly ginger, garlic, coriander and mint leaves. In this blog post I have shared vegetable biryani made 4 different ways using pressure cooker, stove top, mangalore veg biryani and instant pot version.</p>
+<h1>Ingredients</h1>
+<ul>
+    <li>1 stick Cinnamon</li>
+    <li>2 tsp Fennel Seeds</li>
+    <li>1 tsp Cumin Seeds</li>
+    <li>2 Bay Leaf</li>
+    <li>5 Green Cardamom</li>
+    <li>1 Black Cardamom</li>
+    <li>4 Cloves</li>
+    <li>2 Mace</li>
+    <li>4 Kalpasi</li>
+    <li>3 tbsp Coriander Seeds</li>
+    <li>4 Dry Red Chilli</li>
+    <li>1 Star Anise</li>
+    <li>1 tsp Whole Black Pepper</li>
+</ul>
+<h1>Steps</h1>
+<ol>
+    <li>Wash and soak basmati rice for at least 30 minutes to 1 hour. Soaking rice helps remove the excess starch from the rice and makes it more fluffy.</li>
+    <li>Grind ginger, garlic, coriander leaves, mint leaves to a smooth puree and set aside.</li>
+    <li>Heat oil+ghee in a pressure cooker. Add in bay leaf or in my case I used pandan leaf in the oil and let them sizzle. Now add in sliced onions and fry till golden brown.</li>
+    <li>Add in ground ginger garlic herb paste and saute for 5 minutes till raw smell leaves and the colour changes.</li>
+    <li>Add in chopped tomatoes and cook till it gets soft.</li>
+    <li>Add in biryani masala powder. If you don't have biryani masala powder, use 1 tbsp chilli powder, 2 tbsp coriander powder, 1 tsp turmeric powder and 2 tsp garam masala powder.</li>
+    <li>Mix the spice powder into the masala. Stir fry for few seconds.</li>
+    <li>Add in your vegetables mixture. I used a mix of carrots, cauliflower, green peas, beans.</li>
+    <li>Stir fry the vegetables in the masala for 4 to 5 minutes till raw smell leaves.</li>
+    <li>Add in soaked basmati rice and mix to combined. Stir fry the rice with vegetables for 2 to 3 minutes.</li>
+    <li>Pour in water. Season the biryani with salt.</li>
+    <li>Add in ½ tsp sugar, lemon juice and mix well. Taste and adjust the seasoning.</li>
+    <li>Mix everything, bring it to a boil.</li>
+    <li>Cover and pressure cook for 1 whistle. Turn off the flame, let the pressure release by itself.</li>
+    <li>Now the rice is cooked.</li>
+    <li>Heat ghee in a small pan, add cashews and fry till golden brown.</li>
+    <li>Pour the fried nuts into biryani and mix well.</li>
+    <li>Veg biryani ready to serve. Enjoy.</li>
+</ol>
